   -- Modified Axes from having Hammers boost their production to having
      Axes boost their production by default.  This makes them consistant with
      other items made from wood rather than being the exception.
   -- Added (disabled) resource enhancing buildings for all resources that
      didn't yet have one.

Changes from 4.0.7 -> 4.0.8
--------------------------------------------------
   -- Added the BUILD HELP <unit> syntax to allow two units to collaborate
      on creating an object even during the first turn it is being built.
   -- Added BUY ALL and SELL ALL commands.  SELL ALL will attempt to sell
      all of an item that you can.  BUY ALL will attempt to buy as many of
      an item as you can.
   -- Modified the 'Item:' players.in command to give the unit information
      about the new item they own if they haven't already seen it.
   -- Fixed a bug in setting a unit as MAGE when given skills via the GM
      option.
   -- Fixed a bug where the game editor could give out disabled items.
   -- Fixed a bug in the game editor to mark a unit as having owned an item.
   -- Fixed a bug in the save code which caused items to be shown every turn
      instead of just the first turn
   -- Fixed where FORCE_SHIELD versus ranged attacks got broken in the
      rewrite of the combat system.
   -- Fixed bug.  A unit with wolves/eagles/dragons which LOST the
      ability to control them (either via having the mage assassinated or
      via the mage FORGETing the skill) now loses the creatures.
   -- Added ability to control a factions starting location and whether or
      no the 'traditional' starting unit is created to the players.in file.
   -- Added more objects and stuff for Ceran
   -- Fixed bug which allowed two guard units to spring up in a city.
   -- Fixed problems with fileio.cpp on win32
   -- RE-FIXED bug with city guards
   -- Fixed a bug where a disabled item/skill/object was still be accepted
      by the checker.